--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    Welcome to the world of HR-on demand! This site is currently under construction - stay tuned!
+    Welcome to the world of HR-on demand! We have just run our first commit!
   </body>
 </html>
