Revert "Changed the text"
This reverts commit eceebda6e8e08f2dc552632f1810ba43fb0bbd75.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    Welcome to the world of HR-on demand! I needed to do some correction to the initial git...
+    Welcome to the world of HR-on demand! We have just run our first commit!
   </body>
 </html>
